--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
-layout: home
+layout: default
 ---
-<!--
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -51,4 +51,3 @@ layout: home
     {%- endif %}
   {%- endif -%}
 </div>
--->
