--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+{%- include head.html -%}
+
+
+{%- include projects.html -%}
+
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
