--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,17 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
+ <body>
+
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
   </body>
 </html>
