--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
 
-  <link rel="stylesheet" src="assets/css/custom.css"/> 
+  <link rel="stylesheet" src="assets/css/custom.css"> 
+  <link rel="stylesheet" src="assets/main.scss"> 
+  
   <body>
 
     {%- include header.html -%}
