--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 
 @import
-  "_sass/minima/skins/{{ site.minima.skin | default: 'classic' }}",
-  "_sass/minima/initialize";
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+  "minima/initialize";
