--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,9 +14,13 @@ $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
+
+$border-color-01: #2a7ae2 !default;
 $link-hover-color: #2a7ae2 !default;
 $link-visited-color: #2a7ae2 !default;
 $link-base-color:  #2a7ae2 !default;
+
+
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
