--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
-
+$code-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $border-color-01: #2a7ae2 !default;
 $link-hover-color: #2a7ae2 !default;
 $link-visited-color: #2a7ae2 !default;
