--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -68,7 +68,8 @@ $table-header-bg-color: $lm-table-header-bg-color;
 $table-header-border: $lm-table-header-border;
 $table-border-color: $lm-table-border-color;
 
-$on-large: #fdfdfd !default;
+$on-medium:        $on-palm !default;
+$on-large:         $on-laptop !default;
 $code-background-color: #fdfdfd !default;
 $code-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $border-color-01: #2a7ae2 !default;
