--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -10,7 +10,6 @@ dl, dd, ol, ul, figure {
 }
 
 
-
 /**
  * Basic styling
  */
@@ -263,5 +262,6 @@ table {
 /*Custom styles*/
 .custom_header {
   color: green;
+  background: url("assets/images/header_img.jpg");
 }
 
