--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -262,6 +262,6 @@ table {
 /*Custom styles*/
 .custom_header {
   color: green;
-  background: url("assets/images/header_img.jpg");
+  background: url("images/header_img.jpg");
 }
 
