--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -264,6 +264,10 @@ body {
 	background: #FFF9E3;
 }
 
+.site-header {
+	padding: 0 3em;
+}
+
 .custom_header {
   background: url("images/header_img.jpg");
   height: 70vh;
@@ -272,14 +276,15 @@ body {
 	border-radius: 20px;
 	border: 10px solid #FFF9E3;
 	background-size: cover;
+	background-position: bottom;
 }
 
 .wrapper {
 	padding: 0;
-	margin: 0;	
+	margin: 0;
+	max-width: 100%;
 }
 
 .home {
 	padding: 5%;
 }
-
