Add new sections to the home page

--- a/_includes/custom_header.html
+++ b/_includes/custom_header.html
@@ -1,3 +1,11 @@
-<div class="custom_header">
-  <p><span>Potencia tu</span></br><span>Presencia Digital</span><p>  
+<div class="custom-header">
+  <div class="custom-header__main-text">
+    <p>
+      <span class="custom-header__main-text--regular">Potencia tu</span><span
+        class="custom-header__main-text--bold">Presencia Digital</span>
+    </p>
+    <p class="custom-header__main-text--regular">Diseño web personalizado para ti</p>
+    <a class="custom-header__button" href="#">Ver proyectos</a>
+  </div>
+    <img class="custom-header__img" src="../assets/images/header-icon3d.png"/>
 </div>
