--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 {%- include custom_header.html -%}
+{%- include services.html -%}
+{%- include text_banner.html -%}
+{%- include about.html -%}
 
 <div class="home">
   {%- if page.title -%}
