--- a/_includes/custom_header.html
+++ b/_includes/custom_header.html
@@ -7,5 +7,5 @@
     <p class="custom-header__main-text--regular">Diseño web personalizado para ti</p>
     <a class="custom-header__button" href="#">Ver proyectos</a>
   </div>
-    <img class="custom-header__img" src="../assets/images/header-icon3d.png"/>
+    <img class="custom-header__img" src="assets/images/header-icon3d.png"/>
 </div>
