--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,10 @@
 <div class="about">
-    <img class="about_img" src="assets/images/about-icon3d.png" alt="">
-    <p class="about_text">¡Hola! Soy una entusiasta freelancer especializada en creación de páginas web. Me encanta colaborar con mis clientes para llevar sus ideas a la realidad, y asegurarme de que estén completamente satisfechos con el resultado final. Si necesitas una página web que hable por ti y tu negocio, ¡no dude en ponerse en contacto conmigo!</p>
+    <img class="about__img" src="assets/images/about-icon3d.png" alt="">
+    <div class="about__description">
+        <p class="about__description-text"><span>¡Hola! Soy Nombre</span>, freelancer especializada en creación de páginas web. Me encanta colaborar con mis clientes para llevar sus ideas a la realidad, y asegurarme de que estén completamente satisfechos con el resultado final.
+
+        <span>Si necesitas una página web que hable por ti y tu negocio, ¡no dude en ponerse en contacto conmigo!</span>
+        </p>
+        <a href="contacto" class="about__description-button">Contáctame</a>
+    </div>
 </div>
