--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -304,7 +304,7 @@ body {
   padding: 70px 0 !important;
 }
 
-.page-link[href="/proyectos/"]{
+.page-link[href="/digital-portfolio/proyectos/"]{
   display: none!important;
 }
 
