Update page list style

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -560,6 +560,7 @@ article {
   .site-nav .page-link,
   .about__description-button {
     font-size: 20px;
+		margin-top: 10px;
   }
 
   .about__description-text {
