--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
-            <li class="p-name"> Desarrollo y Diseño por {{ site.author.name | escape }}</li>
+            <li class="p-name"> Desarrollo & Diseño por {{ site.author.name | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
             <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
