Update page list styles

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -590,7 +590,7 @@ article {
 	margin-top: 1em;
 }
 
-.page-link[href="/success-message/"] {
+.page-link[href="/digital-portfolio/success-message/"] {
 	display: none!important;
 }
 
