Update success message styles

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -583,7 +583,8 @@ article {
 /** Success-Message Page **/
 
 .success-message__img {
-	width: 20%;
+	width: 20%!important;
+	margin-left: 0px!important;
 }
 
 .success-message__text {
