--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -383,13 +383,14 @@ article {
 .contact__description-button{
   background-color: #333333;
   color: #ffffff !important;
-  font-size: 1.2em;
-  padding: 0.5em;
+  font-size: 1.5em;
+  padding: 0.3em;
   border-radius: 25px;
   width: fit-content;
   cursor: pointer;
 	border: none;
 	margin-top: 5px;
+	
 }
 
 .custom-header__img {
@@ -452,7 +453,7 @@ article {
   border-radius: 20px;
   color: #755637;
   font-weight: 700;
-  font-size: 3em;
+  font-size: 2.8em;
   padding: 1em 0.5em;
   position: relative;
   top: -115px;
@@ -605,6 +606,15 @@ article {
 
 .post-header {
 	margin-top: 20px;
+}
+
+.post-list {
+	font-size: 2em;
+}
+
+.post-link {
+	font-size: inherit;
+	font-weight: 700;
 }
 
 @media screen and (max-width: 1000px) {
