--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -320,7 +320,7 @@ article {
 }
 
 .site-title, .site-title:visited {
-  color: #1e1e1e;		
+  color: #1e1e1e!important;		
   font-weight: 800 !important;
   margin-top: 5px;
   line-height: initial!important;	
