--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,18 +1,18 @@
 <div class="services">
     <div class="services__item">
         <img src="assets/images/design_images/ejem1.jpg" alt="#">
-        <p class="services__item-text">Lorem Ipsum</p>
+        <p class="services__item-text">Diseño web</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/ejem.jpg" alt="#">
-        <p class="services__item-text">Lorem Ipsum</p>
+        <p class="services__item-text">SEO y Accesibilidad</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/ejem.jpg" alt="#">
-        <p class="services__item-text">Lorem Ipsum</p>
+        <p class="services__item-text">Textos profesionales</p>
     </div>
     <div class="services__item">
         <img src="assets/images/design_images/ejem1.jpg" alt="#">
-        <p class="services__item-text">Lorem Ipsum</p>
+        <p class="services__item-text">Rediseño y Mantenimiento</p>
     </div>
 </div>
