--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -459,7 +459,7 @@ article {
 
 .text-banner {
   background-color: #ffffff;
-  border: 1px solid rgb(108 108 108 / 7%);
+  border: 1px solid #6c6c6c12;
   border-radius: 20px;
   color: #755637;
   font-weight: 700;
