--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -300,7 +300,7 @@ body {
 }
 
 .page-content {
-  padding: 0!important;
+  padding: 0 !important;
 }
 
 article {
@@ -308,8 +308,16 @@ article {
   padding-right: 3em !important;
 }
 
+.post-header {
+  margin-top: 30px;
+}
+
+.post-content {
+  font-size: 1.6em !important;
+}
+
 .site-header {
-  padding: 0.5em 3em!important;
+  padding: 0.5em 3em !important;
   width: 100%;
   box-sizing: border-box;
   border-bottom: none !important;
@@ -319,6 +327,7 @@ article {
   background: #ffffff1f;
   backdrop-filter: blur(1px);
 }
+
 .site-header a {
   max-width: 95%;
 }
@@ -423,6 +432,11 @@ article {
   justify-content: center;
 }
 
+.services {
+  width: 83%;
+  margin: auto;
+}
+
 .projects {
   top: initial;
 }
@@ -451,6 +465,10 @@ article {
   width: 100%;
   object-fit: cover;
   object-position: top;
+}
+
+.services__item img {
+  object-position: center;
 }
 
 .services__item-text,
@@ -676,6 +694,10 @@ article {
     margin-left: 30px;
   }
 
+  .services {
+    width: 100%;
+  }
+
   .services__item img {
     max-height: 23vh;
   }
@@ -717,6 +739,7 @@ article {
     bottom: 24px;
     right: 0;
     height: 36%;
+    opacity: 0.7;
   }
 
   .text-banner {
@@ -756,7 +779,7 @@ article {
   .about__description-text,
   .post-list,
   .post-content {
-    font-size: 1.3em;
+    font-size: 1.3em !important;
     width: 100%;
   }
 
@@ -787,8 +810,9 @@ article {
 
 @media screen and (max-width: 370px) {
 
-  .about, .home{
-    padding: 0 1em 2em!important;
+  .about,
+  .home {
+    padding: 0 1em 2em !important;
   }
 
   .site-title {
