--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,4 +15,5 @@
         <img src="assets/images/design_images/seo-service.jpg" alt="#">
         <p class="services__item-text">SEO y Análisis</p>
     </div>
+    <a class="custom-header__button" href="proyectos">Ver proyectos</a>
 </div>
