Modify padding property

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -621,7 +621,7 @@ article {
 .contact__form input {
   height: 2em;
   font-size: 1.1em;
-  padding: 2px;
+  padding: 0 0.5em;
 }
 
 .contact__form textarea[name="message"] {
