Add new selectors for padding property

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -620,18 +620,18 @@ article {
 
 .contact__form input {
   height: 2em;
-  font-size: 1.1em;
-  padding: 0 0.5em;
 }
 
 .contact__form textarea[name="message"] {
   height: 7em;
   font-family: inherit;
-  font-size: 1.1em;
-  padding: 6px 2px;
   resize: none;
 }
 
+.contact__form input, .contact__form textarea[name="message"] {
+  font-size: 0.7em;
+  padding: 0.2em 0.5em;
+}
 /** Success-Message Page **/
 
 .success-message__img {
