--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -453,7 +453,7 @@ article {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.03);
   border-radius: 20px;
   overflow: hidden;
-  border: 6px solid #ffffff;
+  border: 2px solid #ffffff;
   max-height: 500px;
   text-align: center;
   justify-content: center;
@@ -465,6 +465,7 @@ article {
   width: 100%;
   object-fit: cover;
   object-position: top;
+  border-radius: 20px;
 }
 
 .services__item img {
